--- a/package.json
+++ b/package.json
@@ -12,8 +12,6 @@
   "devDependencies": {
     "@types/jest": "^29.5.1",
     "jest": "^29.5.0",
-    "jest-localstorage-mock": "^2.4.26",
-    "webpack": "^5.83.1",
-    "webpack-cli": "^5.1.1"
+    "jest-localstorage-mock": "^2.4.26"
   }
 }
